added more html tags practice (3/5)

--- a/html-tags/index.html
+++ b/html-tags/index.html
@@ -42,7 +42,7 @@
 			</address>
 		</div>
 		<div class="">
-			<h3>area tag</h3>
+			<h3>area map tags</h3>
 			<img src="./image/me.jpg" alt="me" usemap="#tommy"/>
 			<map name="tommy">
 				<area shape="circle" coords="50,50,5" title="nose" />
@@ -202,7 +202,7 @@
 			</dl>
 		</div>
 		<div class="">
-			<h3>del tag</h3>
+			<h3>del inx tag</h3>
 			<p>
 				My favorite color is <del>red</del> <ins>purple</ins>.
 			</p>
@@ -236,7 +236,7 @@
 			</p>
 		</div>
 		<div class="">
-			<h3>fieldset tag</h3>
+			<h3>fieldset legend tags</h3>
 			<form>
 				<fieldset>
 					<legend>fieldset practice</legend>
@@ -244,6 +244,91 @@
 					<input type="submit">
 				</fieldset>
 			</form>
+		</div>
+		<div class="">
+			<h3>figure figcaption tags</h3>
+			<figure>
+				<img src="./image/me.jpg" alt="me" />
+				<figcaption>Fig. 1 - This is figcaption</figcaption>
+			</figure>
+		</div>
+		<div class="">
+			<h3>footer tag</h3>
+			<footer>
+				copy right / my contact / link to top / etc.
+			</footer>
+		</div>
+		<div class="">
+			<h3>form label input tags</h3>
+			<form>
+				<label for="first_name">First Name:</label>
+				<input type="text" id="first_name">
+				Last Name: <input type="text">
+				<input type="radio" name="radio">
+				<input type="radio" name="radio">
+				<input type="checkbox">
+				<button type="submit">Submit</button>
+			</form>
+		</div>
+		<div class="">
+			<h3>h1 - h6 tags</h3>
+			<h1>This is heading 1</h1>
+			<h2>This is heading 2</h2>
+			<h3>This is heading 3</h3>
+			<h4>This is heading 4</h4>
+			<h5>This is heading 5</h5>
+			<h6>This is heading 6</h6>
+		</div>
+		<div class="">
+			<h3>header tag</h3>
+			<header>
+				<h1>Most important heading</h1>
+				<h2>less important headding</h2>
+				<p>
+					brief information
+				</p>
+			</header>
+		</div>
+		<div class="">
+			<h3>hr tag</h3>
+			<p>
+				first content
+			</p>
+			<hr />
+			<p>
+				second content
+			</p>
+			<hr />
+			<p>
+				third content
+			</p>
+		</div>
+		<div class="">
+			<h3>iframe tag</h3>
+			<iframe src="http://tommy-oh.com" width="500px" height="300px">
+				<p>
+					Your browser does not support iframes.
+				</p>
+			</iframe>
+		</div>
+		<div class="">
+			<h3>ol ul li tags</h3>
+			<ol>
+				<li>ordered list 1</li>
+				<li>ordered list 2</li>
+				<li>ordered list 3</li>
+			</ol>
+			<ul>
+				<li>unorderd list 1</li>
+				<li>unorderd list 2</li>
+				<li>unorderd list 3</li>
+			</ul>
+		</div>
+		<div class="">
+			<h3>mark tag</h3>
+			<p>
+				non marked and this is <mark>marked / highlighted</mark>.
+			</p>
 		</div>
 		<script type="text/javascript">
 			document.getElementById('audio').volume = 0.2;
