added more html tags practice (4/5)

--- a/html-tags/index.html
+++ b/html-tags/index.html
@@ -330,8 +330,107 @@
 				non marked and this is <mark>marked / highlighted</mark>.
 			</p>
 		</div>
+		<div class="">
+			<h3>meter tag</h3>
+			<meter min="0" max="100" value="50">50 out of 100</meter>
+			<meter value="0.5">50%</meter>
+		</div>
+		<div class="">
+			<h3>nav tag</h3>
+			<nav>
+				<a href="#">top</a> |
+				<a href="#">middle</a> |
+				<a href="#">bottom</a>
+			</nav>
+		</div>
+		<div class="">
+			<h3>select optgroup option tags</h3>
+			<select>
+				<optgroup label="langauges">
+					<option>JavaScript</option>
+					<option>Python</option>
+				</optgroup>
+				<optgroup label="fruits">
+					<option>Banana</option>
+					<option>Apple</option>
+				</optgroup>
+			</select>
+		</div>
+		<div class="">
+			<h3>p tag</h3>
+			<p>
+				paragraph 1
+			</p>
+			<p>
+				paragraph 2
+			</p>
+			<p>
+				paragraph 3
+			</p>
+		</div>
+		<div class="">
+			<h3>pre tag</h3>
+			<pre>hello                hi.</pre>
+		</div>
+		<div class="">
+			<h3>progress tag</h3>
+			HTML Reference Progress: <progress value="4" max="5">4/5</progress>
+		</div>
+		<div class="">
+			<h3>q tag</h3>
+			<p>
+				My life philosophy:
+				<q>Work till I no longer have to intoduce myself.</q>
+			</p>
+		</div>
+		<div class="">
+			<h3>ruby rt rp tags</h3>
+			<ruby>
+				타미
+				<rt>tommy</rt>
+				<rp>tommy in korean</rp>
+			</ruby>
+		</div>
+		<div class="">
+			<h3>s tag</h3>
+			<p>
+				without strike and <s>with strike</s>
+			</p>
+		</div>
+		<div class="">
+			<h3>section tag</h3>
+			<article class="">
+				<section>
+					<h3>Section 1</h3>
+					<p>
+						section 1 paragraph
+					</p>
+				</section>
+				<section>
+					<h3>Section 2</h3>
+					<p>
+						section 2 paragraph
+					</p>
+				</section>
+				<section>
+					<h3>Section 3</h3>
+					<p>
+						section 3 paragraph
+					</p>
+				</section>
+			</article>
+		</div>
+		<div class="">
+			<h3>small tag</h3>
+			<p>
+				normal paragraph text vs. <small>small texts</small>
+			</p>
+		</div>
 		<script type="text/javascript">
 			document.getElementById('audio').volume = 0.2;
 		</script>
+		<noscript>
+			Your browser does not support JavaScript!
+		</noscript>
 	</body>
 </html>
